--- a/predicting_heart_failure.ipynb
+++ b/predicting_heart_failure.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpoEu9moH7tIwukApnERUI",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPpoEu9moH7tIwukApnERUI"
     },
     "kernelspec": {
       "name": "python3",
@@ -543,16 +542,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/g-vaughan/classic_machine_learning/blob/main/predicting_heart_failure.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
